MDEV-20435 ALTER USER prints bad error message